2. Make a cool other webpage

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,6 +7,11 @@
     </head>
 
     <body>
+        <!-- navigation -->
+        <div>
+            <a href="./tweets.html">Go To Tweets</a>
+        </div>
+
         <h1>ALX</h1>
         <h2>Intro to SWE</h2>
         <h3>HTML, CSS basics</h3>
