3. Make a cool website

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Html Basic</title>
-    </head>
 
-    <body>
-        <!-- navigation -->
-        <div>
-            <a href="./tweets.html">Go To Tweets</a>
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Html Basic</title>
+</head>
 
-        <h1>ALX</h1>
-        <h2>Intro to SWE</h2>
-        <h3>HTML, CSS basics</h3>
+<body>
+    <header>
+        <ul>
+            <li>
+                <a href="./tweets.html">Go To Tweets</a>
+            </li>
+        </ul>
+    </header>
 
-        <p>This is Alx Intro to SWE</p>
-        <p>This course is very awesome</p>
-        <p>I think I'm going to be loving it here</p>
-        <p>Yours Truly, Software Developer</p>
+    <main>
+        <article>
+            <h1>ALX</h1>
+            <h2>Intro to SWE</h2>
+            <h3>HTML, CSS basics</h3>
 
-        <a href="https://picsum.photos" target="_blank">
-            <img src="https://picsum.photos/200" alt="Random Picsum Photo" />
-        </a>
-    </body>
+            <p>This is Alx Intro to SWE</p>
+            <p>This course is very awesome</p>
+            <p>I think I'm going to be loving it here</p>
+            <p>Yours Truly, Software Developer</p>
+
+            <a href="https://picsum.photos" target="_blank">
+                <img src="https://picsum.photos/200" alt="Random Picsum Photo" />
+            </a>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        Made by AdongoJr - <a href="https://github.com/AdongoJr2" target="_blank">here</a>
+    </footer>
+</body>
+
 </html>
