--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -8,27 +8,39 @@
 </head>
 
 <body>
-    <!-- navigation -->
-    <div>
-        <a href="./index.html">Go To HomePage</a>
-    </div>
+    <header>
+        <ul>
+            <li>
+                <a href="./index.html">Go To HomePage</a>
+            </li>
+        </ul>
+    </header>
 
-    <!-- embedded tweet -->
-    <div>
-        <blockquote class="twitter-tweet">
-            <p lang="en" dir="ltr">
-                Documents completed, medical done yesterday; Lucas Hernandez will be new Paris
-                Saint-Germain player. Here we go confirmed. 🔴🔵✅
-                    <a href="https://twitter.com/hashtag/PSG?src=hash&amp;ref_src=twsrc%5Etfw">#PSG</a>
-                    <br><br>
-                    Official statement being prepared, Bayern approved add ons/payment terms structure of €45m package deal.
-                    <a href="https://t.co/YKnAxhFPyv">pic.twitter.com/YKnAxhFPyv</a>
-            </p>
-            &mdash; Fabrizio Romano (@FabrizioRomano)
-            <a href="https://twitter.com/FabrizioRomano/status/1675037772409626627?ref_src=twsrc%5Etfw">July 1, 2023</a>
-        </blockquote>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
+    <main>
+        <article>
+            <div>
+                <blockquote class="twitter-tweet">
+                    <p lang="en" dir="ltr">
+                        Documents completed, medical done yesterday; Lucas Hernandez will be new Paris
+                        Saint-Germain player. Here we go confirmed. 🔴🔵✅
+                            <a href="https://twitter.com/hashtag/PSG?src=hash&amp;ref_src=twsrc%5Etfw">#PSG</a>
+                            <br><br>
+                            Official statement being prepared, Bayern approved add ons/payment terms structure of €45m package deal.
+                            <a href="https://t.co/YKnAxhFPyv">pic.twitter.com/YKnAxhFPyv</a>
+                    </p>
+                    &mdash; Fabrizio Romano (@FabrizioRomano)
+                    <a href="https://twitter.com/FabrizioRomano/status/1675037772409626627?ref_src=twsrc%5Etfw">July 1, 2023</a>
+                </blockquote>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </article>
+
+        <aside>placeholder to add comment thread later</aside>
+    </main>
+
+    <footer>
+        Made by AdongoJr - <a href="https://github.com/AdongoJr2" target="_blank">here</a>
+    </footer>
 </body>
 
 </html>
