--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -12,10 +12,46 @@
         </a>
 
         <div>
-            <a href="">Link</a>
-            <a href="">Link</a>
-            <a href="">Link</a>
+            <a href="">LINK</a>
+            <a href="">LINK</a>
+            <a href="">LINK</a>
         </div>
     </header>
+
+    <main>
+        <section>
+            <div>
+                <h1>TITLE</h1>
+                <p>3 WORDS</p>
+                <button>BUTTON</button>
+            </div>
+
+            <div>
+                <h2>TITLE</h2>
+                <div>
+                    <div>
+                        <img src="" alt="Image" />
+                        <h3>NAME</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+                    <div>
+                        <img src="" alt="Image" />
+                        <h3>NAME</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+                    <div>
+                        <img src="" alt="Image" />
+                        <h3>NAME</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+                    <div>
+                        <img src="" alt="Image" />
+                        <h3>NAME</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
