--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <a href="">
-            <img src="" alt="Logo" />
+            <img src="" alt="LOGO" />
         </a>
 
         <div>
@@ -30,26 +30,36 @@
                 <h2>TITLE</h2>
                 <div>
                     <div>
-                        <img src="" alt="Image" />
+                        <img src="" alt="IMAGE" />
                         <h3>NAME</h3>
                         <p>SUB-TITLE</p>
                     </div>
                     <div>
-                        <img src="" alt="Image" />
+                        <img src="" alt="IMAGE" />
                         <h3>NAME</h3>
                         <p>SUB-TITLE</p>
                     </div>
                     <div>
-                        <img src="" alt="Image" />
+                        <img src="" alt="IMAGE" />
                         <h3>NAME</h3>
                         <p>SUB-TITLE</p>
                     </div>
                     <div>
-                        <img src="" alt="Image" />
+                        <img src="" alt="IMAGE" />
                         <h3>NAME</h3>
                         <p>SUB-TITLE</p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section>
+            <img src="" alt="IMAGE" />
+
+            <div>
+                <p>QUOTE</p>
+                <p>AUTHOR</p>
+                <p>SUB-TITLE</p>
             </div>
         </section>
     </main>
