--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -62,6 +62,72 @@
                 <p>SUB-TITLE</p>
             </div>
         </section>
+
+        <section>
+            <h2>TITLE</h2>
+            <div>
+                <div>
+                    <img src="" alt="IMAGE" />
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                    <div>
+                        <img src="" alt="IMAGE" />
+                        <h4>TITLE</h4>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="" alt="IMAGE" />
+                        </div>
+                        <h4>TITLE</h4>
+                    </div>
+                </div>
+                <div>
+                    <img src="" alt="IMAGE" />
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                    <div>
+                        <img src="" alt="IMAGE" />
+                        <h4>TITLE</h4>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="" alt="IMAGE" />
+                        </div>
+                        <h4>TITLE</h4>
+                    </div>
+                </div>
+                <div>
+                    <img src="" alt="IMAGE" />
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                    <div>
+                        <img src="" alt="IMAGE" />
+                        <h4>TITLE</h4>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="" alt="IMAGE" />
+                        </div>
+                        <h4>TITLE</h4>
+                    </div>
+                </div>
+                <div>
+                    <img src="" alt="IMAGE" />
+                    <h3>TITLE</h3>
+                    <p>TEXT</p>
+                    <div>
+                        <img src="" alt="IMAGE" />
+                        <h4>TITLE</h4>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="" alt="IMAGE" />
+                        </div>
+                        <h4>TITLE</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
