--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -128,6 +128,33 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <h2>TITLE</h2>
+            <div>
+                <div>
+                    <img src="" alt="IMAGE" />
+                    <h3>TITLE</h3>
+                    <p>TET</p>
+                </div>
+                <div>
+                    <img src="" alt="IMAGE" />
+                    <h3>TITLE</h3>
+                    <p>TET</p>
+                </div>
+                <div>
+                    <img src="" alt="IMAGE" />
+                    <h3>TITLE</h3>
+                    <p>TET</p>
+                </div>
+                <div>
+                    <img src="" alt="IMAGE" />
+                    <h3>TITLE</h3>
+                    <p>TET</p>
+                </div>
+            </div>
+            <button>BUTTON</button>
+        </section>
     </main>
 </body>
 </html>
