--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -155,6 +155,32 @@
             </div>
             <button>BUTTON</button>
         </section>
+        
+        <section>
+            <title>TITLE</title>
+            <div>
+                <div>
+                    <div>
+                        <h3>TITLE</h3>
+                        <p>TEXT</p>
+                    </div>
+                    <div>
+                        <h3>TITLE</h3>
+                        <p>TEXT</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h3>TITLE</h3>
+                        <p>TEXT</p>
+                    </div>
+                    <div>
+                        <h3>TITLE</h3>
+                        <p>TEXT</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
