--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -182,5 +182,20 @@
             </div>
         </section>
     </main>
+
+    <section>
+        <div>
+            <div>
+                <img src="" alt="IMAGE" />
+                <div>
+                    <img src="" alt="IMAGE" />
+                    <img src="" alt="IMAGE" />
+                    <img src="" alt="IMAGE" />
+                </div>
+            </div>
+
+            <p>TEXT</p>
+        </div>
+    </section>
 </body>
 </html>
