3. Some more styling

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -24,6 +24,9 @@
 <body class="works_on_smartphone">
     <header>
         <ul>
+            <li class="logo">
+                ☯
+            </li>
             <li>
                 <a href="./tweets.html">Go To Tweets</a>
             </li>
