--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -12,6 +12,9 @@
 <body class="works_on_smartphone">
     <header>
         <ul>
+            <li class="logo">
+                ☯
+            </li>
             <li>
                 <a href="./index.html">Go To HomePage</a>
             </li>
