--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -81,13 +81,16 @@
             </div>
         </section>
 
-        <section>
-            <img src="" alt="IMAGE" />
+        <section class="section-2">
+            <img class="avatar" src="./images/Bitmap-2.png" alt="user" />
 
             <div>
-                <p>QUOTE</p>
-                <p>AUTHOR</p>
-                <p>SUB-TITLE</p>
+                <p class="quote">
+                    « Those tutorials are concise and go straight to the point. 
+                    I can't think of a better place to learn smiling. And it's so fun!
+                </p>
+                <p class="author-name">Person Name</p>
+                <p class="author-description">weather presenter</p>
             </div>
         </section>
 
