--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -13,7 +13,7 @@
         <div class="hero-background">
             <img src="./images/Bitmap.png" alt="hero-background">
         </div>
-        
+
         <nav>
             <a href="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="168" height="30" viewBox="0 0 168 30" fill="none">
@@ -53,7 +53,7 @@
 
             <div class="learn-from-the-pros">
                 <h2 class="heading">
-                    <span class="color-primary learn">Learn</span> 
+                    <span class="color-primary learn">Learn</span>
                     from the pros
                 </h2>
                 <div class="pros">
@@ -86,7 +86,7 @@
 
             <div>
                 <p class="quote">
-                    « Those tutorials are concise and go straight to the point. 
+                    « Those tutorials are concise and go straight to the point.
                     I can't think of a better place to learn smiling. And it's so fun!
                 </p>
                 <p class="author-name">Person Name</p>
@@ -94,67 +94,115 @@
             </div>
         </section>
 
-        <section>
-            <h2>TITLE</h2>
-            <div>
-                <div>
-                    <img src="" alt="IMAGE" />
-                    <h3>TITLE</h3>
-                    <p>TEXT</p>
-                    <div>
-                        <img src="" alt="IMAGE" />
-                        <h4>TITLE</h4>
+        <section class="section-3">
+            <h2 class="title">
+                Most
+                <span class="color-primary popular">popular</span>
+                tutorials
+            </h2>
+            <div class="tutorials">
+                <div class="tutorial-item">
+                    <img src="./images/tutorials/diagonal-smile.png" alt="diagonal-smile" />
+                    <div class="play-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
+                            <path opacity="0.860352" fill-rule="evenodd" clip-rule="evenodd"
+                                d="M32 64C49.6731 64 64 49.6731 64 32C64 14.3269 49.6731 0 32 0C14.3269 0 0 14.3269 0 32C0 49.6731 14.3269 64 32 64Z"
+                                fill="white" />
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M40.5 32.5L27.5 40.5L27.5 24.5L40.5 32.5Z"
+                                fill="#C271FF" />
+                        </svg>
                     </div>
-                    <div>
+                    <h3 class="title">Diagonal Smile</h3>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+                    </p>
+                    <div class="avatar">
+                        <img src="./images/tutorials/1.png" alt="avatar" />
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div class="rating">
                         <div>
-                            <img src="" alt="IMAGE" />
+                            <img src="./images/tutorials/rating.svg" alt="rating" />
                         </div>
-                        <h4>TITLE</h4>
+                        <h4>8 min</h4>
                     </div>
                 </div>
-                <div>
-                    <img src="" alt="IMAGE" />
-                    <h3>TITLE</h3>
-                    <p>TEXT</p>
-                    <div>
-                        <img src="" alt="IMAGE" />
-                        <h4>TITLE</h4>
+                <div class="tutorial-item">
+                    <img src="./images/tutorials/sad-smile.png" alt="sad-smile" />
+                    <div class="play-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
+                            <path opacity="0.860352" fill-rule="evenodd" clip-rule="evenodd"
+                                d="M32 64C49.6731 64 64 49.6731 64 32C64 14.3269 49.6731 0 32 0C14.3269 0 0 14.3269 0 32C0 49.6731 14.3269 64 32 64Z"
+                                fill="white" />
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M40.5 32.5L27.5 40.5L27.5 24.5L40.5 32.5Z"
+                                fill="#C271FF" />
+                        </svg>
                     </div>
-                    <div>
+                    <h3 class="title">Sad Smile</h3>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+                    </p>
+                    <div class="avatar">
+                        <img src="./images/tutorials/1.png" alt="avatar" />
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div class="rating">
                         <div>
-                            <img src="" alt="IMAGE" />
+                            <img src="./images/tutorials/rating.svg" alt="rating" />
                         </div>
-                        <h4>TITLE</h4>
+                        <h4>8 min</h4>
                     </div>
                 </div>
-                <div>
-                    <img src="" alt="IMAGE" />
-                    <h3>TITLE</h3>
-                    <p>TEXT</p>
-                    <div>
-                        <img src="" alt="IMAGE" />
-                        <h4>TITLE</h4>
+                <div class="tutorial-item">
+                    <img src="./images/tutorials/natural-smile.png" alt="natural-smile" />
+                    <div class="play-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
+                            <path opacity="0.860352" fill-rule="evenodd" clip-rule="evenodd"
+                                d="M32 64C49.6731 64 64 49.6731 64 32C64 14.3269 49.6731 0 32 0C14.3269 0 0 14.3269 0 32C0 49.6731 14.3269 64 32 64Z"
+                                fill="white" />
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M40.5 32.5L27.5 40.5L27.5 24.5L40.5 32.5Z"
+                                fill="#C271FF" />
+                        </svg>
                     </div>
-                    <div>
+                    <h3 class="title">Natural Smile</h3>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+                    </p>
+                    <div class="avatar">
+                        <img src="./images/tutorials/1.png" alt="avatar" />
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div class="rating">
                         <div>
-                            <img src="" alt="IMAGE" />
+                            <img src="./images/tutorials/rating.svg" alt="rating" />
                         </div>
-                        <h4>TITLE</h4>
+                        <h4>8 min</h4>
                     </div>
                 </div>
-                <div>
-                    <img src="" alt="IMAGE" />
-                    <h3>TITLE</h3>
-                    <p>TEXT</p>
-                    <div>
-                        <img src="" alt="IMAGE" />
-                        <h4>TITLE</h4>
+                <div class="tutorial-item">
+                    <img src="./images/tutorials/happy-smile.png" alt="IMAGE" />
+                    <div class="play-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" fill="none">
+                            <path opacity="0.860352" fill-rule="evenodd" clip-rule="evenodd"
+                                d="M32 64C49.6731 64 64 49.6731 64 32C64 14.3269 49.6731 0 32 0C14.3269 0 0 14.3269 0 32C0 49.6731 14.3269 64 32 64Z"
+                                fill="white" />
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M40.5 32.5L27.5 40.5L27.5 24.5L40.5 32.5Z"
+                                fill="#C271FF" />
+                        </svg>
                     </div>
-                    <div>
+                    <h3 class="title">Happy Smile</h3>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+                    </p>
+                    <div class="avatar">
+                        <img src="./images/tutorials/1.png" alt="avatar" />
+                        <h4>Phillip Massey</h4>
+                    </div>
+                    <div class="rating">
                         <div>
-                            <img src="" alt="IMAGE" />
+                            <img src="./images/tutorials/rating.svg" alt="rating" />
                         </div>
-                        <h4>TITLE</h4>
+                        <h4>8 min</h4>
                     </div>
                 </div>
             </div>
