--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -208,31 +208,36 @@
             </div>
         </section>
 
-        <section>
-            <h2>TITLE</h2>
-            <div>
-                <div>
-                    <img src="" alt="IMAGE" />
-                    <h3>TITLE</h3>
-                    <p>TET</p>
+        <section class="section-4">
+            <h2 class="title">
+                <span class="color-primary free">Free</span>
+                membership
+            </h2>
+            <div class="memberships">
+                <div class="membership-item">
+                    <img src="./images/smile.svg" alt="IMAGE" />
+                    <h3 class="title">Lorem ipsum</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div>
-                    <img src="" alt="IMAGE" />
-                    <h3>TITLE</h3>
-                    <p>TET</p>
+                <div class="membership-item">
+                    <img src="./images/smile.svg" alt="IMAGE" />
+                    <h3 class="title">Lorem ipsum</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div>
-                    <img src="" alt="IMAGE" />
-                    <h3>TITLE</h3>
-                    <p>TET</p>
+                <div class="membership-item">
+                    <img src="./images/smile.svg" alt="IMAGE" />
+                    <h3 class="title">Lorem ipsum</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div>
-                    <img src="" alt="IMAGE" />
-                    <h3>TITLE</h3>
-                    <p>TET</p>
+                <div class="membership-item">
+                    <img src="./images/smile.svg" alt="IMAGE" />
+                    <h3 class="title">Lorem ipsum</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
-            <button>BUTTON</button>
+            <button class="register">
+                REGISTER FOR FREE
+            </button>
         </section>
 
         <section>
