--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -240,27 +240,35 @@
             </button>
         </section>
 
-        <section>
-            <title>TITLE</title>
-            <div>
-                <div>
-                    <div>
-                        <h3>TITLE</h3>
-                        <p>TEXT</p>
+        <section class="section-5">
+            <title class="title">F.A.Q.</title>
+            <div class="faqs">
+                <div class="faq-column">
+                    <div class="faq-column-item">
+                        <h3 class="title">How does this work?</h3>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
                     </div>
-                    <div>
-                        <h3>TITLE</h3>
-                        <p>TEXT</p>
+                    <div class="faq-column-item">
+                        <h3 class="title">How does this work?</h3>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
                     </div>
                 </div>
-                <div>
-                    <div>
-                        <h3>TITLE</h3>
-                        <p>TEXT</p>
+                <div class="faq-column">
+                    <div class="faq-column-item">
+                        <h3 class="title">How does this work?</h3>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
                     </div>
-                    <div>
-                        <h3>TITLE</h3>
-                        <p>TEXT</p>
+                    <div class="faq-column-item">
+                        <h3 class="title">How does this work?</h3>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
                     </div>
                 </div>
             </div>
