--- a/html_forms/0-contact-form.html
+++ b/html_forms/0-contact-form.html
@@ -11,12 +11,12 @@
     <form>
         <label for="name">name</label>
         <br>
-        <input type="text" name="name" id="name" placeholder="name" required />
+        <input type="text" name="name" id="name" placeholder="name" required>
         <br><br>
 
         <label for="email">email address</label>
         <br>
-        <input type="email" name="email" id="email" placeholder="email address" required />
+        <input type="email" name="email" id="email" placeholder="email address" required>
         <br><br>
 
         <label for="message">message</label>
